# Zephyros

./: README.md  sync_script.sh
.github/workflows/: release.yml
control-app/: package-lock.json  package.json
control-app/src/: index.html  main.js  styles.css
control-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
control-app/src-tauri/icons/: icon.icns
control-app/src-tauri/src/: lib.rs  main.rs
microdot/: __init__.py  microdot.py  multipart.py  test_client.py
python/: code.py  main.py
