[package]
name = "Zephyros_Control_App"
version = "1.0.0"
description = "A Tauri App"
authors = ["Gilles de Looze", "MECH2A2"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zephyros_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
wifi-rs = "0.2.4"
wifi_scan = "0.7"
# gilrs removed, no longer using gamepad support

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-location = { version = "0.3", features = ["CLLocationManager"] }
